docker/Kubernetes/frontend_backend_db/docker_to_K8/03-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
        #api request with /api(/|$)(.*) are rewritten as / whatever follows /api
        #receives /api/login =>strip /api => /login => forwards to backend service => backend pod
          - path: /api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: api
                port:
                  number: 8080
